# paddleocr2onnx

./: README.md  main.py  pyproject.toml
